@@ -517,3 +517,27 @@ fi
 echo "ok"
 rm -f "$ARPSCANOUTPUT"
 rm -f "$EXAMPLEOUTPUT"
+
+# Simple ARP response with --quiet option
+echo "Checking --quiet formatting using $SAMPLE01 ..."
+cat >"$EXAMPLEOUTPUT" <<_EOF_
+127.0.0.1	08:00:2b:06:07:08
+_EOF_
+ARPARGS="--plain --retry=1 --quiet"
+./arp-scan $ARPARGS --readpktfromfile="$SAMPLE01" 127.0.0.1 > "$ARPSCANOUTPUT" 2>&1
+if test $? -ne 0; then
+   rm -f "$ARPSCANOUTPUT"
+   rm -f "$EXAMPLEOUTPUT"
+   echo "FAILED"
+   exit 1
+fi
+cmp -s "$ARPSCANOUTPUT" "$EXAMPLEOUTPUT"
+if test $? -ne 0; then
+   rm -f "$ARPSCANOUTPUT"
+   rm -f "$EXAMPLEOUTPUT"
+   echo "FAILED"
+   exit 1
+fi
+echo "ok"
+rm -f "$ARPSCANOUTPUT"
+rm -f "$EXAMPLEOUTPUT"
